Fix spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -19,13 +19,13 @@ html {
   box-sizing: inherit;
 }
 
-.img-flex{
+.img-flex {
   display: block;
   width: 100%;
 }
 
 a {
-  color: currentColor
+  color: currentColor;
 }
 
 .card {
